--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -3,18 +3,16 @@ header {
   background-color: $bg-light;
   padding: $all-space;
   display: grid;
-  grid-template-areas: "logo search nav button";
+  grid-template-areas: "logo search navbar button";
   grid-template-columns: 2fr 3fr auto auto;
   align-items: center;
-  gap: $header-space;
   width: 100%;
-  box-sizing: border-box;
 
   .logo {
     grid-area: logo;
     font-size: 1.5rem;
     color: $primary-color;
-    font-weight: bold;
+    font-weight: bolder;
     padding: $header-space;
   }
 
@@ -22,6 +20,7 @@ header {
     grid-area: search;
     padding: $header-space;
     border-radius: 5px;
+    box-shadow: 0px 0px 7px 1px rgba($secondary-color, 0.1);
     border: none;
     font-size: $font-size;
     color: $text-dark;
@@ -36,13 +35,10 @@ header {
   }
 
   ul {
-    grid-area: nav;
-    list-style: none;
     display: flex;
-    gap: $header-space;
     align-items: center;
-    margin: 0;
-    padding: 0;
+    grid-area: navbar;
+    list-style: none;
 
     li {
       a {
@@ -62,7 +58,7 @@ header {
 
   button {
     grid-area: button;
-    padding: $header-space * 1.5;
+    padding: $header-space;
     border: none;
     border-radius: 11px;
     background-color: $primary-color;
@@ -113,33 +109,33 @@ header {
   }
 
   @media screen and (max-width: 480px) {
-    padding: $all-space / 2;
+    padding: $all-space;
 
     .logo {
-      font-size: 1.2rem;
-      padding: $header-space / 2;
+      font-size: $font-size;
+      padding: $header-space;
     }
 
     input {
       width: 100%;
-      font-size: $font-size * 0.9;
+      font-size: $font-size;
     }
 
     ul {
       flex-direction: column;
-      gap: $header-space / 2;
+      gap: $header-space;
 
       li {
         a {
-          font-size: $font-size * 0.9;
-          padding: $header-space / 2;
+          font-size: $font-size;
+          padding: $header-space;
         }
       }
     }
 
     button {
-      font-size: $font-size * 0.9;
-      padding: $header-space / 2;
+      font-size: $font-size;
+      padding: $header-space;
     }
   }
 }
