--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -17,7 +17,8 @@
 @import "./layout/forms";
 @import "./layout/sidebar";
 @import "./layout/footer";
-
+@import "./layout/campaignForm";
+@import "./layout/dashboard";
 // components
 @import "./components/buttons";
 
