--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -8,6 +8,13 @@ header {
   align-items: center;
   width: 100%;
 
+  .welcome-user {
+    color: $primary-color;
+    font-size: $font-size;
+    margin-left: auto;
+    padding: $header-space;
+    font-weight: bolder;
+  }
   .logo {
     grid-area: logo;
     font-size: 1.5rem;
