--- a/Sass/layout/_campaigns.scss
+++ b/Sass/layout/_campaigns.scss
@@ -38,7 +38,7 @@
 
         img {
           width: 100%;
-          height: auto;
+          height: 200px;
           border-radius: 8px 8px 0 0;
           margin-bottom: $header-space;
         }
