--- a/Sass/main.scss
+++ b/Sass/main.scss
@@ -19,6 +19,8 @@
 @import "./layout/footer";
 @import "./layout/campaignForm";
 @import "./layout/dashboard";
+@import "./layout/whyUs";
+
 // components
 @import "./components/buttons";
 
