--- a/Sass/layout/_aboutUs.scss
+++ b/Sass/layout/_aboutUs.scss
@@ -1,5 +1,7 @@
 .about-us {
   display: grid;
+  height: 60vh;
+  align-items: center;
   grid-template-columns: 1fr minmax(300px, 1200px) 1fr;
   padding: $all-space * 2 $all-space;
   background-color: $bg-light;
@@ -31,7 +33,7 @@
         transition: transform 0.3s ease;
 
         &:hover {
-          transform: translateY(-5px);
+          transform: scale(1.1);
         }
 
         h3 {
