before changing the html path

--- a/Sass/layout/_header.scss
+++ b/Sass/layout/_header.scss
@@ -1,6 +1,6 @@
 header {
   font-family: $main-font;
-  background-color: $bg-light;
+  background-color: $white;
   padding: $all-space;
   display: grid;
   grid-template-areas: "logo search navbar button";
