--- a/Sass/pages/_campaign.scss
+++ b/Sass/pages/_campaign.scss
@@ -48,6 +48,11 @@
         color: $text-dark;
         padding-bottom: $all-space;
       }
+      .campaign-deadline {
+        font-size: 0.9rem;
+        color: $text-dark;
+        padding-bottom: $all-space;
+      }
     }
     #openDonate {
       cursor: pointer;
