--- a/Sass/layout/_aboutUs.scss
+++ b/Sass/layout/_aboutUs.scss
@@ -4,7 +4,7 @@
   align-items: center;
   grid-template-columns: 1fr minmax(300px, 1200px) 1fr;
   padding: $all-space * 2 $all-space;
-  background-color: $bg-light;
+  background-color: $white;
   color: $text-dark;
   font-family: $main-font;
 
