--- a/Sass/layout/_campaigns.scss
+++ b/Sass/layout/_campaigns.scss
@@ -96,19 +96,36 @@
           margin-bottom: $header-space;
         }
 
-        h3 {
+        .campaign-title {
           font-size: 1.5rem;
           font-weight: 600;
           color: $primary-color;
           margin-bottom: $header-space;
         }
 
-        p {
+        .campaign-description {
           font-size: 1rem;
-          line-height: 1.6;
+          line-height: 1.3;
           margin-bottom: $header-space;
         }
-
+        .campaign-goal {
+          font-size: 1rem;
+          font-weight: 600;
+          color: $accent-color;
+          margin-bottom: $header-space;
+        }
+        .campaign-raised {
+          font-size: 1rem;
+          font-weight: 600;
+          color: $success;
+          margin-bottom: $header-space;
+        }
+        .campaign-deadline {
+          font-size: 1rem;
+          font-weight: 500;
+          color: $text-dark;
+          margin-bottom: $header-space;
+        }
         .progress {
           background-color: lighten($primary-color, 40%);
           border-radius: 5px;
